--- a/ts/packages/agents/browser/src/extension/views/knowledgeLibrary.html
+++ b/ts/packages/agents/browser/src/extension/views/knowledgeLibrary.html
@@ -234,6 +234,15 @@
               <div id="summaryContent" class="summary-content"></div>
             </div>
 
+            <!-- Related Entities -->
+            <div id="entitiesSection" class="entities-section" style="display: none">
+              <div class="entities-header">
+                <i class="bi bi-diagram-2"></i>
+                <span>Related Entities</span>
+              </div>
+              <div id="entitiesContent" class="entities-content"></div>
+            </div>
+
             <!-- Results Container -->
             <div id="resultsContainer" class="results-container"></div>
 
