--- a/ts/packages/agents/browser/src/extension/views/knowledgeLibrary.html
+++ b/ts/packages/agents/browser/src/extension/views/knowledgeLibrary.html
@@ -235,7 +235,11 @@
             </div>
 
             <!-- Related Entities -->
-            <div id="entitiesSection" class="entities-section" style="display: none">
+            <div
+              id="entitiesSection"
+              class="entities-section"
+              style="display: none"
+            >
               <div class="entities-header">
                 <i class="bi bi-diagram-2"></i>
                 <span>Related Entities</span>
