--- a/ts/packages/agents/browser/src/extension/views/knowledgeLibrary.html
+++ b/ts/packages/agents/browser/src/extension/views/knowledgeLibrary.html
@@ -513,9 +513,7 @@
                       0
                     </div>
                     <div class="knowledge-label">Total Entities Extracted</div>
-                    <div class="knowledge-breakdown">
-                      
-                    </div>
+                    <div class="knowledge-breakdown"></div>
                   </div>
                 </div>
 
@@ -525,13 +523,9 @@
                     <h3>Topics</h3>
                   </div>
                   <div class="knowledge-card-body">
-                    <div class="knowledge-metric" id="totalTopicsMetric">
-                      0
-                    </div>
+                    <div class="knowledge-metric" id="totalTopicsMetric">0</div>
                     <div class="knowledge-label">Topics Identified</div>
-                    <div class="topic-cloud">
-                      
-                    </div>
+                    <div class="topic-cloud"></div>
                   </div>
                 </div>
 
@@ -545,9 +539,7 @@
                       0
                     </div>
                     <div class="knowledge-label">Actionable Items Found</div>
-                    <div class="action-breakdown">
-                      
-                    </div>
+                    <div class="action-breakdown"></div>
                   </div>
                 </div>
               </div>
